--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/invoice_return.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/invoice_return.html
@@ -2,7 +2,7 @@
     <span class="text-muted fw-light">Hóa đơn/</span>
     Hóa đơn trả hàng</h4>
 <div class="nav-align-top mb-4">
-    <ul class="nav nav-pills mb-3" role="tablist">
+    <ul class="nav nav-pills mb-3 text-center fs-5" role="tablist">
         <li class="nav-item w-px-250">
             <a type="button" class="nav-link active text-center"
                th:href="@{/admin/bill/list_invoice_return}"
