--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/refuse_bill_return.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/refuse_bill_return.html
@@ -2,7 +2,7 @@
     <span class="text-muted fw-light">Hóa đơn/</span>
     Hóa đơn trả hàng</h4>
 <div class="nav-align-top mb-4">
-    <ul class="nav nav-pills mb-3" role="tablist">
+    <ul class="nav nav-pills mb-3 text-center fs-5" role="tablist">
         <li class="nav-item w-px-250 ">
             <a type="button" class="nav-link "
                th:href="@{/admin/bill/list_invoice_return}"
@@ -27,7 +27,7 @@
         </li>
     </ul>
     <div class="tab-content">
-        <div class="tab-pane show active" id="navs-pills-top-home" >
+        <div class="tab-pane show active" id="navs-pills-top-home">
             <h5 class="mb-4">Hóa Đơn Yêu Cầu Hoàn Trả</h5>
             <div class="table-responsive text-nowrap">
                 <table class="table card-table text-center">
