--- a/webBanTiVi/src/main/resources/templates/user/page/home/home.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/home/home.html
@@ -54,11 +54,10 @@
 <!--</section>-->
 <section class="container-xxl" th:if="${#lists.size(listTopRate)>0}">
     <div class="mb-4">
-        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
-                class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Sản phẩm nổi
-            bật</h3>
+        <div class="row mb-4 pt-3"><h2
+                class="header col text-center pt-2 pb-2 px-3 text-uppercase fw-bold">Sản phẩm nổi bật</h2>
         </div>
-        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-sm-2 g-4">
             <div class="col" th:each="topRate,Stat:${listTopRate}">
                 <div class="card h-100 item-product">
                     <div class="card-body mb-4 mt-3">
@@ -70,7 +69,8 @@
                                             <span class="fs-5 card-title"
                                                   th:text="${topRate.nameProduct}">
                                                         </span></a>
-                        <div th:if="${topRate.price!=0}"><span class="text-strike-through fs-6 "> [(${topRate.price})]<small
+                        <div th:if="${topRate.price!=0}"><span
+                                class="text-strike-through fs-6 "> [(${#numbers.formatDecimal(topRate.price,0,'COMMA',0,'POINT')})]<small
                                 class="align-text-top">đ</small></span>
                         </div>
                         <div><span class="text-danger fs-6 fw-bold"
@@ -86,15 +86,15 @@
         </div>
     </div>
 </section>
-<section>
+<section class="mb-5">
     <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
 </section>
 <section class="container-xxl" th:if="${#lists.size(listNewProduct)>0}">
     <div class="mb-4">
-        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
-                class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Sản phẩm mới</h3>
+        <div class="row pt-3 mb-4"><h2
+                class="header col text-center pt-2 pb-2 px-3 text-uppercase fw-bold">Sản phẩm mới</h2>
         </div>
-        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-sm-2 g-4">
             <div class="col" th:each="newProduct,Stat:${listNewProduct}">
                 <div class="card h-100 item-product">
                     <div class="card-body mb-4 mt-3">
@@ -106,7 +106,7 @@
                                             <span class="fs-5 card-title"
                                                   th:text="${newProduct.nameProduct}">
                                                         </span></a>
-                        <div th:if="${newProduct.price!=0}"><span class="text-strike-through fs-6 "> [(${newProduct.price})]<small
+                        <div th:if="${newProduct.price!=0}"><span class="text-strike-through fs-6 "> [(${#numbers.formatDecimal(newProduct.price,0,'COMMA',0,'POINT')})]<small
                                 class="align-text-top">đ</small></span>
                         </div>
                         <div><span class="text-danger fs-6 fw-bold"
@@ -122,21 +122,21 @@
         </div>
     </div>
 </section>
-<section>
+<section class="mb-5">
     <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
 </section>
 <section class="container-xxl" th:if="${#lists.size(listTivi)>0}">
     <div class="mb-4">
-        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
-                class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Tivi</h3>
+        <div class="row pt-3 mb-4"><h2
+                class="header col text-center pt-2 pb-2 px-3 text-uppercase fw-bold">Tivi</h2>
         </div>
         <div class="row mt-n3 mb-3 justify-content-end"><a
-                class="fs-6 text-end text-decoration-underline link-dark w-auto" href="/tivi">Xem tất
+                class="fs-5 text-end text-decoration-underline link-dark w-auto" href="/tivi">Xem tất
             cả</a></div>
         <div id="carouselTivi" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
+                    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-sm-2 g-4">
                         <div class="col" th:each="tivi,Stat:${listTivi}" th:if="${Stat.index<10}">
                             <div class="card h-100 item-product">
                                 <div class="card-body mb-4 mt-3">
@@ -148,7 +148,7 @@
                                             <span class="fs-5 card-title"
                                                   th:text="${tivi.nameProduct}">
                                                         </span></a>
-                                    <div th:if="${tivi.price!=0}"><span class="text-strike-through fs-6 "> [(${tivi.price})]<small
+                                    <div th:if="${tivi.price!=0}"><span class="text-strike-through fs-6 "> [(${#numbers.formatDecimal(tivi.price,0,'COMMA',0,'POINT')})]<small
                                             class="align-text-top">đ</small></span>
                                     </div>
                                     <div><span class="text-danger fs-6 fw-bold"
@@ -164,7 +164,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
+                    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-sm-2 g-4">
                         <div class="col" th:each="tivi,Stat:${listTivi}"
                              th:if="${Stat.index>=10 && Stat.index<20}">
                             <div class="card h-100 item-product">
@@ -177,7 +177,7 @@
                                             <span class="fs-5  card-title"
                                                   th:text="${tivi.nameProduct}">
                                                         </span></a>
-                                    <div th:if="${tivi.price!=0}"><span class="text-strike-through fs-6 "> [(${tivi.price)]<small
+                                    <div th:if="${tivi.price!=0}"><span class="text-strike-through fs-6 "> [(${#numbers.formatDecimal(tivi.price,0,'COMMA',0,'POINT')})]<small
                                             class="align-text-top">đ</small></span>
                                     </div>
                                     <div><span class="text-danger fs-6 fw-bold"
@@ -194,12 +194,12 @@
                 </div>
             </div>
             <!--                </div>-->
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselTivi"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselTivi" th:if="${#lists.size(listTivi)>10}"
                     data-bs-slide="prev">
                 <i class='bx bx-chevron-left bx-lg'></i>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselTivi"
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselTivi" th:if="${#lists.size(listTivi)>10}"
                     data-bs-slide="next">
                 <i class='bx bx-chevron-right bx-lg'></i>
                 <span class="visually-hidden">Next</span>
@@ -207,22 +207,21 @@
         </div>
     </div>
 </section>
-<section>
+<section class="mb-5">
     <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
 </section>
 <section class="container-xxl" th:if="${#lists.size(listPhuKien)>0}">
     <div class="mb-4">
-        <!--            <div class="">-->
-        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
-                class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Phụ kiện</h3>
+        <div class="row mb-4 pt-3"><h2
+                class="header col text-center pt-2 pb-2 px-3 text-uppercase fw-bold">Phụ kiện</h2>
         </div>
         <div class="row mt-n3 mb-3 justify-content-end"><a
-                class="fs-6 text-end text-decoration-underline link-dark w-auto" href="/accessory">Xem tất
+                class="fs-5 text-end text-decoration-underline link-dark w-auto" href="/accessory">Xem tất
             cả</a></div>
         <div id="carouselPhukien" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
+                    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-sm-2 g-4">
                         <div class="col" th:each="phuKien,Stat:${listPhuKien}"
                              th:if="${Stat.index<10}">
                             <div class="card h-100 item-product">
@@ -235,7 +234,7 @@
                                             <span class="fs-5  card-title"
                                                   th:text="${phuKien.nameProduct}">
                                                         </span></a>
-                                    <div th:if="${phuKien.price!=0}"><span class="text-strike-through fs-6"> [(${phuKien.price})]<small
+                                    <div th:if="${phuKien.price!=0}"><span class="text-strike-through fs-6"> [(${#numbers.formatDecimal(phuKien.price,0,'COMMA',0,'POINT')})]<small
                                             class="align-text-top">đ</small></span>
                                     </div>
                                     <div><span class="text-danger fs-6 fw-bold"
@@ -251,7 +250,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
+                    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-sm-2 g-4">
                         <div class="col" th:each="phuKien,Stat:${listPhuKien}"
                              th:if="${Stat.index>=10 && Stat.index<20}">
                             <div class="card h-100 item-product">
@@ -264,7 +263,7 @@
                                             <span class="fs-5 card-title"
                                                   th:text="${phuKien.nameProduct}">
                                                         </span></a>
-                                    <div th:if="${phuKien.price!=0}"><span class="text-strike-through fs-6"> [(${phuKien.price})]<small
+                                    <div th:if="${phuKien.price!=0}"><span class="text-strike-through fs-6">[(${#numbers.formatDecimal(phuKien.price,0,'COMMA',0,'POINT')})]<small
                                             class="align-text-top">đ</small></span>
                                     </div>
                                     <div><span class="text-danger fs-6 fw-bold"
@@ -281,12 +280,13 @@
                 </div>
             </div>
             <!--                </div>-->
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselPhukien"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselPhukien" th:if="${#lists.size(listPhuKien)>10}"
                     data-bs-slide="prev">
+                <i class='bx bx-chevron-left bx-lg'></i>
                 <i class='bx bx-chevron-left bx-lg'></i>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselPhukien"
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselPhukien" th:if="${#lists.size(listPhuKien)>10}"
                     data-bs-slide="next">
                 <i class='bx bx-chevron-right bx-lg'></i>
                 <span class="visually-hidden">Next</span>
@@ -294,11 +294,11 @@
         </div>
     </div>
 </section>
-<section>
+<section class="mb-5">
     <img class="d-block w-100" src="/image/camera-360-do-01.jpg">
 </section>
 <section class="mt-4 container-xxl">
-    <div class="row row-cols-1 row-cols-xl-3 row-cols-lg-3 row-cols-md-2 row-cols-sm-2 g-4">
+    <div class="row row-cols-lg-3 row-cols-sm-2 g-4">
         <div class="col text-center">
             <i class='bx bx-check-shield' style='color:#ff0202; font-size: 80px'></i>
             <h5 class="text-secondary">Sản phẩm chính hãng</h5>
