--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/discountProduct.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/discountProduct.html
@@ -1,24 +1,26 @@
 <h4 class="fw-semibold py-3 mb-4"> Danh sách sản phẩm được giảm [(${discount.getValue()})]%</h4>
 <div class="row justify-content-end me-4">
-          <!-- Nội dung của menu item -->
+    <!-- Nội dung của menu item -->
+</div>
+<form class="justify-content-end me-4">
+    <label>Thêm sản phẩm giảm giá:</label>
+    <input type="text" class="form-control" th:name="keyword"
+           th:value="${param.keyword}" placeholder="Tìm theo SKU sản phẩm">
+</form>
+<form th:action="@{/admin/couponproduct/add}" method="post" th:object="${discountproduct}">
+    <div class="justify-content-end me-4">
+        <select id="products" th:name="id" class="form-select">
+            <option th:each="product : ${listallproduct}" th:value="${product.id}"
+                    th:text="${product.sku}"></option>
+        </select>
+        <div class="mt-2">
+            <input type="text" th:name="coupon" th:value="${discount.id}" hidden>
+            <button type="submit" class="btn btn-success mb-4 w-auto">
+                <i class='tf-icon bx bx-plus-medical'></i> Thêm
+            </button>
+        </div>
     </div>
-    <form class="justify-content-end me-4">
-        <label>Thêm sản phẩm giảm giá:</label>
-            <input type="text" class="form-control" th:name="keyword"
-                   th:value="${param.keyword}" placeholder="Tìm theo SKU sản phẩm">
-    </form>
-        <form th:action="@{/admin/couponproduct/add}" method="post" th:object="${discountproduct}">
-            <div class="justify-content-end me-4">
-                <select id="products"  th:name="id" class="form-select">
-                    <option th:each="product : ${listallproduct}" th:value="${product.id}"
-                            th:text="${product.sku}"></option>
-                </select>
-                <input type="text" th:name="coupon" th:value="${discount.id}" hidden>
-                <button type="submit" class="btn btn-success mb-4 w-auto">
-                    <i class='tf-icon bx bx-plus-medical'></i> Thêm
-                </button>
-            </div>
-        </form>
+</form>
 <div class="card mb-3 ">
     <div class="card-header">
         <form class="col-12 mt-2">
