--- a/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
@@ -378,36 +378,36 @@
     </div>
     <div class="card-footer">
 
-        <div class="d-inline-flex float-end">
-            <div aria-label="Page pagination">
-                <ul class="pagination">
-                    <li class="page-item first">
-                        <a class="page-link" th:href="@{'/admin/voucher/list?page=1&size='+${session.size}}"><i
-                                class="tf-icon bx bx-chevrons-left"></i></a>
-                    </li>
-                    <li class="page-item prev">
-                        <a class="page-link"
-                           th:href="@{'/admin/voucher/list?page='+${session.page==1? '1': session.page - 1}+'&size='+${session.size}}"><i
-                                class="tf-icon bx bx-chevron-left"></i></a>
-                    </li>
-                    <li class="page-item" th:each="pagination:${#numbers.sequence(1,session.list.totalPages)}">
-                        <a class="page-link"
-                           th:href="@{'/admin/voucher/list?page='+${pagination}+'&size='+${session.size}}"
-                           th:text="${pagination}"></a>
-                    </li>
-                    <li class="page-item next">
-                        <a class="page-link"
-                           th:href="@{'/admin/voucher/list?page='+${session.page < session.list.totalPages ? session.page + 1 : session.list.totalPages }+'&size='+${session.size}}"><i
-                                class="tf-icon bx bx-chevron-right"></i></a>
-                    </li>
-                    <li class="page-item last">
-                        <a class="page-link"
-                           th:href="@{'/admin/voucher/list?page='+${session.list.totalPages}+'&size='+${session.size}}"><i
-                                class="tf-icon bx bx-chevrons-right"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<!--        <div class="d-inline-flex float-end">-->
+<!--            <div aria-label="Page pagination">-->
+<!--                <ul class="pagination">-->
+<!--                    <li class="page-item first">-->
+<!--                        <a class="page-link" th:href="@{'/admin/voucher/list?page=1&size='+${session.size}}"><i-->
+<!--                                class="tf-icon bx bx-chevrons-left"></i></a>-->
+<!--                    </li>-->
+<!--                    <li class="page-item prev">-->
+<!--                        <a class="page-link"-->
+<!--                           th:href="@{'/admin/voucher/list?page='+${session.page==1? '1': session.page - 1}+'&size='+${session.size}}"><i-->
+<!--                                class="tf-icon bx bx-chevron-left"></i></a>-->
+<!--                    </li>-->
+<!--                    <li class="page-item" th:each="pagination:${#numbers.sequence(1,session.list.totalPages)}">-->
+<!--                        <a class="page-link"-->
+<!--                           th:href="@{'/admin/voucher/list?page='+${pagination}+'&size='+${session.size}}"-->
+<!--                           th:text="${pagination}"></a>-->
+<!--                    </li>-->
+<!--                    <li class="page-item next">-->
+<!--                        <a class="page-link"-->
+<!--                           th:href="@{'/admin/voucher/list?page='+${session.page < session.list.totalPages ? session.page + 1 : session.list.totalPages }+'&size='+${session.size}}"><i-->
+<!--                                class="tf-icon bx bx-chevron-right"></i></a>-->
+<!--                    </li>-->
+<!--                    <li class="page-item last">-->
+<!--                        <a class="page-link"-->
+<!--                           th:href="@{'/admin/voucher/list?page='+${session.list.totalPages}+'&size='+${session.size}}"><i-->
+<!--                                class="tf-icon bx bx-chevrons-right"></i></a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </div>
 <script>
