--- a/webBanTiVi/src/main/resources/templates/user/page/product/accessory.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/accessory.html
@@ -12,208 +12,65 @@
                 <li class="breadcrumb-item active">Phụ kiện</li>
             </ol>
         </nav>
-        <!--    <div class="card mt-2">-->
-        <!--        <div class="card-body">-->
-        <!--            <div class="d-inline">-->
-        <!--                <span class="mb-2">Lọc danh sách:</span>-->
-        <!--            </div>-->
-
-        <!--            <div class="btn-group d-inline mx-3">-->
-        <!--                <button type="button" class="btn btn-outline-secondary dropdown-toggle w-auto mb-2"-->
-        <!--                        data-bs-toggle="dropdown"-->
-        <!--                        data-bs-auto-close="outside"-->
-        <!--                        aria-haspopup="true" aria-expanded="true">-->
-        <!--                    Loại-->
-        <!--                </button>-->
-        <!--                <div class="dropdown-menu w-px-500 h-auto" style="overflow-x: hidden; max-height: 300px">-->
-        <!--                    <div class="pt-2 px-4 justify-content-between">-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                    </div>-->
-        <!--                    <div class="d-flex">-->
-        <!--                        <button class="btn btn-outline-secondary ms-auto mx-5 mb-2 w-auto">Tìm</button>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--                &lt;!&ndash;                </div>&ndash;&gt;-->
-        <!--            </div>-->
-        <!--            <div class="btn-group mx-3 d-inline">-->
-        <!--                <button type="button" class="btn btn-outline-secondary dropdown-toggle w-auto mb-2"-->
-        <!--                        data-bs-toggle="dropdown"-->
-        <!--                        data-bs-auto-close="outside"-->
-        <!--                        aria-haspopup="true" aria-expanded="true">-->
-        <!--                    Giá-->
-        <!--                </button>-->
-        <!--                <div class="dropdown-menu w-px-500 h-auto" style="overflow-x: hidden; max-height: 300px">-->
-        <!--                    <div class="pt-2 px-4 justify-content-between">-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <div class="d-inline mx-3 ">-->
-        <!--                            <div class="form-check form-check-inline w-auto pb-2">-->
-        <!--                                <input type="checkbox" class="form-check-input">-->
-        <!--                                <label class="form-check-label"> 90inch </label>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                    </div>-->
-        <!--                    <div class="d-flex">-->
-        <!--                        <button class="btn btn-outline-secondary ms-auto mx-5 mb-2 w-auto">Tìm</button>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--                &lt;!&ndash;                </div>&ndash;&gt;-->
-        <!--            </div>-->
-        <!--            <div class="mb-3 px-4 d-inline">-->
-        <!--                <div class="d-inline">-->
-        <!--                    Xếp theo:-->
-        <!--                </div>-->
-        <!--                <select class="form-select w-auto d-inline mx-3">-->
-        <!--                    <option>Mặc định</option>-->
-        <!--                    <option>Giá</option>-->
-        <!--                </select>-->
-        <!--                <div class="d-inline">-->
-        <!--                    (100 Sản phẩm)-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <!--    </div>-->
-        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
-            <div class="col" th:each="phuKien,Stat:${listPhuKien}">
-                <div class="card h-100 item-product">
-                    <div class="card-body mb-4 mt-3">
-                        <img class="img-fluid d-flex mx-auto my-4"
-                             th:src="|/image/product/${phuKien.image}|"
-                             alt="Hình ảnh bị lỗi"/>
-                        <a th:href="@{'/product/detail/'+${phuKien.id}}"
-                           class="stretched-link mb-2 text-black">
-                                            <span class="fs-5  card-title"
-                                                  th:text="${phuKien.nameProduct}">
-                                                        </span></a>
-                        <div th:if="${phuKien.price!=0}"><span
-                                class="text-strike-through fs-6"> [(${phuKien.price})]<small
-                                class="align-text-top">đ</small></span>
+        <div class="card mb-3">
+            <div class="card-body">
+                <div class="mb-3 d-flex">
+                    <div class="d-inline col-sm-2"><span>Tìm:</span></div>
+                    <div class="col-sm-7 row">
+                        <div class="w-75">
+                            <input class="form-control " type="search" id="key"
+                                   placeholder="Tìm tên sản phẩm, thông số ...">
                         </div>
-                        <div><span class="text-danger fs-6 fw-bold"
-                        >[(${#numbers.formatDecimal(phuKien.reduceMoney,0,'COMMA',0,'POINT')})] <small
-                                class="align-text-top">đ</small></span>
+                        <div class="w-25">
+                            <button type="button" class="btn btn-outline-secondary" id="btn-search">Tìm</button>
                         </div>
-                        <div>
-                            <span>[(${phuKien.point})]<i class='bx bxs-star' style='color:#fee500'></i>([(${phuKien.quantityEvalute})])</span>
+                    </div>
+                </div>
+                <div class="mb-3 d-flex">
+                    <div class="d-inline col-sm-2"><span>Lọc sản phẩm:</span></div>
+                    <div class="btn-group d-inline w-100">
+                        <button type="button" class="mx-3 btn btn-outline-secondary d-inline dropdown-toggle w-auto"
+                                data-bs-toggle="dropdown"
+                                data-bs-auto-close="outside"
+                                aria-haspopup="true" aria-expanded="true">
+                            Hãng
+                        </button>
+                        <div class="dropdown-menu w-px-500 h-auto" style="overflow-x: hidden; max-height: 300px">
+                            <div class="pt-2 px-4 justify-content-between">
+                                <div class="d-inline mx-3 " th:each="brand:${listBrand}">
+                                    <div class="form-check form-check-inline w-auto pb-2">
+                                        <input type="checkbox" class="form-check-input filter-brand"
+                                               th:id="|brand${brand.id}|" th:value="${brand.id}"
+                                               th:field="*{listBrand}">
+                                        <label class="form-check-label" th:for="|brand${brand.id}|"
+                                               th:text="${brand.name}"></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <button class="btn btn-outline-secondary ms-auto mx-5 mb-2 w-auto" type="button">
+                                    Tìm
+                                </button>
+                            </div>
                         </div>
+                        <select class="form-select w-auto d-inline mx-3" id="filterRate" >
+                            <option value="-1">Đánh giá</option>
+                            <option value="1">Từ 1 sao</option>
+                            <option value="2">Từ 2 sao</option>
+                            <option value="3">Từ 3 sao</option>
+                            <option value="4">Từ 4 sao</option>
+                            <option value="5">Từ 5 sao</option>
+                        </select>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4" id="list-product-accessory">
+
+        </div>
 
         <div class="text-center mt-4">
-            <button class="btn btn-outline-secondary w-auto" id="loadMore">Xem thêm sản phẩm</button>
+            <button class="btn btn-outline-secondary w-auto" id="loadMore" value="20">Xem thêm sản phẩm</button>
         </div>
     </section>
     <section class="mt-3">
@@ -293,14 +150,5 @@
         </div>
     </section>
 </div>
-<script>
-    $("#loadMore").click(function () {
-        var scrollPosition = window.scrollY || window.scrollTop || document.getElementsByTagName("html")[0].scrollTop;
-
-        // gửi yêu cầu
-        location.reload();
-        window.onload = function () {
-            window.scrollTo(0, scrollPosition);
-        };
-    })
+<script src="/admin/plugin/js/accessory.js">
 </script>
