--- a/webBanTiVi/src/main/resources/templates/user/page/product/tivi.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/tivi.html
@@ -1,10 +1,12 @@
+<html xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="/admin/plugin/css/card-product.css">
+
 <section>
     <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
 </section>
 <div class="container-xl">
 
-
+    <!--    <form th:action="@{/tivi}" method="get" th:object="${modelTiviPage}">-->
     <section class="mt-4">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb breadcrumb-style1">
@@ -16,49 +18,66 @@
         </nav>
         <div class="card mb-3">
             <div class="card-body">
-                <div class="row  mb-3">
-                    <div class="col"></div>
-                    <div class="col">
+                <div class="mb-3 d-flex">
+                    <div class="d-inline col-sm-2"><span>Tìm:</span></div>
+                    <div class="col-sm-7 row">
+                        <div class="w-75">
+                            <input class="form-control " type="search" id="key"
+                                   placeholder="Tìm tên sản phẩm, thông số ...">
+                        </div>
+                        <div class="w-25">
+                            <button type="button" class="btn btn-outline-secondary" id="btn-search">Tìm</button>
+                        </div>
                     </div>
                 </div>
-                <div class="row justify-content-between">
-                    <div class="col"></div>
-                    <div class="col">
-
+                <div class="mb-3 d-flex">
+                    <div class="d-inline col-sm-2"><span>Lọc sản phẩm:</span></div>
+                    <div class="btn-group d-inline w-100">
+                        <button type="button" class="mx-3 btn btn-outline-secondary d-inline dropdown-toggle w-auto"
+                                data-bs-toggle="dropdown"
+                                data-bs-auto-close="outside"
+                                aria-haspopup="true" aria-expanded="true">
+                            Hãng
+                        </button>
+                        <div class="dropdown-menu w-px-500 h-auto" style="overflow-x: hidden; max-height: 300px">
+                            <div class="pt-2 px-4 justify-content-between">
+                                <div class="d-inline mx-3 " th:each="brand:${listBrand}">
+                                    <div class="form-check form-check-inline w-auto pb-2">
+                                        <input type="checkbox" class="form-check-input filter-brand"
+                                               th:id="|brand${brand.id}|" th:value="${brand.id}"
+                                               th:field="*{listBrand}">
+                                        <label class="form-check-label" th:for="|brand${brand.id}|"
+                                               th:text="${brand.name}"></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <button class="btn btn-outline-secondary ms-auto mx-5 mb-2 w-auto" type="button">
+                                    Tìm
+                                </button>
+                            </div>
+                        </div>
+                        <select class="form-select w-auto d-inline mx-3" id="filterRate" >
+                            <option value="-1">Đánh giá</option>
+                            <option value="1">Từ 1 sao</option>
+                            <option value="2">Từ 2 sao</option>
+                            <option value="3">Từ 3 sao</option>
+                            <option value="4">Từ 4 sao</option>
+                            <option value="5">Từ 5 sao</option>
+                        </select>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
-            <div class="col" th:each="tivi,Stat:${listTivi}">
-                <div class="card h-100 item-product">
-                    <div class="card-body mb-4 mt-3">
-                        <img class="img-fluid d-flex mx-auto my-4"
-                             th:src="|/image/product/${tivi.image}|"
-                             alt="Hình ảnh bị lỗi"/>
-                        <a th:href="@{'/product/detail/'+${tivi.id}}"
-                           class="stretched-link mb-2 text-black">
-                                            <span class="fs-5  card-title"
-                                                  th:text="${tivi.nameProduct}">
-                                                        </span></a>
-                        <div th:if="${tivi.price!=0}"><span class="text-strike-through fs-6 "> [(${tivi.price})]<small
-                                class="align-text-top">đ</small></span>
-                        </div>
-                        <div><span class="text-danger fs-6 fw-bold"
-                        >[(${#numbers.formatDecimal(tivi.reduceMoney,0,'COMMA',0,'POINT')})] <small
-                                class="align-text-top">đ</small></span>
-                        </div>
-                        <div>
-                            <span>[(${tivi.point})]<i class='bx bxs-star' style='color:#fee500'></i>([(${tivi.quantityEvalute})])</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-sm-2 g-4"
+             id="list-product-tivi">
+
         </div>
         <div class="text-center mt-4">
-            <button class="btn btn-outline-secondary w-auto" id="loadMore">Xem thêm sản phẩm</button>
+            <button class="btn btn-outline-secondary w-auto" id="loadMore" value="20">Xem thêm sản phẩm</button>
         </div>
     </section>
+    <!--    </form>-->
     <section class="mt-3">
         <div class="lh-base" style="text-align: justify">
             <h4 class="text-center fw-bold">Smart TV - lựa chọn của người dùng hiện đại</h4>
@@ -144,7 +163,7 @@
         </div>
     </section>
     <section class="mt-4">
-        <div class="row row-cols-1 row-cols-xl-3 row-cols-lg-3 row-cols-md-2 row-cols-sm-2 g-4">
+        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2 g-4">
             <div class="col text-center">
                 <i class='bx bx-check-shield' style='color:#ff0202; font-size: 80px'></i>
                 <h5 class="text-secondary">Sản phẩm chính hãng</h5>
@@ -163,13 +182,15 @@
 </div>
 
 <script>
-    $("#loadMore").click(function () {
-        var scrollPosition = window.scrollY || window.scrollTop || document.getElementsByTagName("html")[0].scrollTop;
-
-        // gửi yêu cầu
-        location.reload();
-        window.onload = function () {
-            window.scrollTo(0, scrollPosition);
-        };
-    })
+    // $("#loadMore").click(function () {
+    //     var scrollPosition = window.scrollY || window.scrollTop || document.getElementsByTagName("html")[0].scrollTop;
+    //
+    //     // gửi yêu cầu
+    //     location.reload();
+    //     window.onload = function () {
+    //         window.scrollTo(0, scrollPosition);
+    //     };
+    // })
 </script>
+<script src="/admin/plugin/js/tivi.js"></script>
+</html>
